# nagyhz_1

./: README.md  kerdesekprogkonzi
bagolydodgegame/: cmakelists.txt  main
bagolydodgegame/docs/: fejlesztoi.docx
bagolydodgegame/include/: color.h  entity.h  game.h  init.h  macros.h  mainloop.h  math_helper.h  menu.h  overlay.h  render.h  scoreboard.h  state.h
bagolydodgegame/src/: entity.c  game.c  init.c  main.c  mainloop.c  math_helper.c  menu.c  overlay.c  render.c
nagyhz_demo/: main  main.c
owldodgegame/: CMakeLists.txt  doxyconf  scoreboard.txt
owldodgegame/docs/: .~lock.fejlesztoi.docx#  .~lock.fejlesztoi.odt#  fejlesztoi.odt  felhasznaloi.docx  felhasznaloi.odt
owldodgegame/include/: entity.h  game.h  macros.h  macros.h.gch  mainloop.h  math_helper.h  menu.h  overlay.h  render.h  scoreboard.h  state.h
owldodgegame/src/: entity.c  game.c  main.c  mainloop.c  math_helper.c  menu.c  overlay.c  render.c  scoreboard.c  state.c
